updated the code to display hight of .bottom-block

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
     </p>
 
     <div class="bottom-block">
-        <p>Some Text</p>
-        <p>Some Text</p>
-        <p>Some Text</p>
-        <p>Some Text</p>
+        <p class="bottom-p">Some Text</p>
+        <p class="bottom-p">Some Text</p>
+        <p class="bottom-p">Some Text</p>
+        <p class="bottom-p">Some Text</p>
     </div>
     <div class="clear"></div>
 </body>
